--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,django
 
+etc/dummydata.txt
+etc/readme.txt
+etc/temp.txt
+
 ### Django ###
 *.log
 *.pot
